--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,3 +1,15 @@
 // 全局样式文件
 // 加载图标样式
 @import "icon";
+
+.page-nav-var {
+  background-color: #3296fa !important;
+
+  .van-nav-bar__title {
+    color: #fff;
+  }
+}
+
+body {
+  background-color: #f5f7f9;
+}
